--- a/composer.json
+++ b/composer.json
@@ -10,9 +10,9 @@
         }
     ],
     "autoload": {
-        "psr-4": [
+        "psr-4": {
             "Ashu\\Aba\\": "src/"
-        ]
+        }
     },
     "require-dev": {
         "phpunit/phpunit": "^9"
